# raylib-raytracing

./: CMakeLists.txt
src/: main.cpp
src/ray-tracing/cpu/: camera.h  color.h  cpu_upscale.h  hittable.h  hittable_list.h  material.h  ray.h  rt_cpu.h  rtweekend.h  sphere.h  vec3.h
src/utility/: tracelog.cpp  tracelog.hpp  utility-core.hpp  utility-exceptions.hpp  utility-json.cpp  utility-json.hpp  utility.cpp  utility.hpp
